--- a/index.html
+++ b/index.html
@@ -7,28 +7,35 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Blog preview card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link  rel="stylesheet" href="style.css">
+  
 </head>
 <body>
 
-  Learning
 
-  Published 21 Dec 2023
+   <div class="card">
+    <img src="./assets/images/illustration-article.svg" alt="Blog preview image">
+    <p class="category">Learning</p>
+    <p class="date">Published 21 Dec 2023</p>
 
-  HTML & CSS foundations
+    <h1 class="title">HTML & CSS foundations</h1>
 
-  These languages are the backbone of every website, defining structure, content, and presentation.
+    <p class="description">
+      These languages are the backbone of every website, defining structure, content, and presentation.
+    </p>
 
-  Greg Hooper
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div class="author">
+      <img src="./assets/images/image-avatar.webp" alt="Greg Hooper">
+      <p class="author-name">Greg Hooper</p>
+    </div>
+     <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Youstena Salama</a>.
   </div>
+  </div>
+
+ 
+
+
 </body>
 </html>
